--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/Shadow_measurements/assets/favicon.17e50649.svg" />
+		<link rel="icon" type="image/svg+xml" href="/shadow_measurements/assets/favicon.17e50649.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>vite-threejs-ts-starter</title>
-		<script type="module" crossorigin src="/Shadow_measurements/assets/index.ff9a6193.js"></script>
-		<link rel="stylesheet" href="/Shadow_measurements/assets/index.d2c18391.css">
+		<title>Shadow Measurements</title>
+		<script type="module" crossorigin src="/shadow_measurements/assets/index.ff9a6193.js"></script>
+		<link rel="stylesheet" href="/shadow_measurements/assets/index.d2c18391.css">
 	</head>
 	<body>
 		
